# chemist-warehouse-scraper

./: Cargo.toml  README.md
src/: catalog.rs  main.rs
src/catalog/: handle_catalog.rs  mod.rs  structs.rs  write_csv.rs
src/catalogs/: handle_catalogs.rs  mod.rs  structs.rs  write_csv.rs
src/common/: utils.rs
