[package]
name = "chemist-warehouse-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
regex = "1"
json = "0.12.4"
csv = "1.1"
serde = { version = "1.0.117", features = ["derive"] }
